--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,17 +1,13 @@
+<% const ROOT = `${process.cwd()}/src/ejs`; %>
 <%# ページIDを入力する %>
 <% pageId = 'top'; %>
 
-<%# グローバル変数（全部に渡す） %>
-<%
-baseUrl = json.pages[pageId].dir;
-imgUrl = baseUrl + 'assts/imagees/';
-%>
 
 <%# ヘッド %>
-<%- include(json.pages[pageId].dir + '_common/_head.ejs') %>
+<%- include(`${ROOT}/_common/_head.ejs`) %>
 
 <%# ヘッダー %>
-<%- include(json.pages[pageId].dir + '_common/_header.ejs') %>
+<%- include(`${ROOT}/_common/_header.ejs`) %>
 
 <!-- main -->
 <main class="l-main">
@@ -20,11 +16,11 @@ imgUrl = baseUrl + 'assts/imagees/';
 </main>
 
 <%# フッター %>
-<%- include(json.pages[pageId].dir + '_common/_footer.ejs') %>
+<%- include(`${ROOT}/_common/_footer.ejs`) %>
 
 <%# スクリプト %>
 <script>
   const hoge = 'TEST'
   console.log(hoge);
 </script>
-<%- include(json.pages[pageId].dir + '_common/_script.ejs') %>
+<%- include(`${ROOT}/_common/_script.ejs`) %>
