画像圧縮タスク見直し、脆弱性問題をやり直してgot以外は解決。他細かい修正。

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -13,6 +13,7 @@
 <main class="l-main">
   <h2>top</h2>
   <p>テキスト</p>
+  <img src="/img/top/sample_jpg.jpg" alt="" width="320" height="213">
 </main>
 
 <%# フッター %>
