--- a/src/assets/sass/foundation/_font.scss
+++ b/src/assets/sass/foundation/_font.scss
@@ -1,21 +1,162 @@
-// Noto Sans Japanese (Google Font)【ゴシック体】
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
+//* =====================================================================
+//* Noto Sans Japanese (Google Font)【ゴシック体】[通常]
+//* =====================================================================
+//* -------------------------------------------------------
+//* CDN
+//* -------------------------------------------------------
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-// Square Font【フリースクエアフォント】
+//* -------------------------------------------------------
+//* ローカル
+//* -------------------------------------------------------
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Thin.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 100;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-ExtraLight.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 200;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Light.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 300;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Regular.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 400;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Medium.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 500;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-SemiBold.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 600;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Bold.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 700;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-ExtraBold.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 800;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Noto Sans JP';
+//   src: url('/assets/font/Noto_Sans_JP/static/NotoSansJP-Black.ttf') format('truetype');
+//   font-optical-sizing: auto;
+//   font-weight: 900;
+//   font-style: normal;
+// }
+
+//* =====================================================================
+//* Noto Sans Japanese (Google Font)【ゴシック体】[バリアブルフォント]
+//* =====================================================================
+//* -------------------------------------------------------
+//* CDN
+//* -------------------------------------------------------
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+
+//* -------------------------------------------------------
+//* ローカル
+//* -------------------------------------------------------
 @font-face {
-  font-family: 'Square Font';
-  src: url('/assets/font/Square.ttf') format('truetype');
-  font-weight: 400;
-}
-@font-face {
-  font-family: 'Squareo Font';
-  src: url('/assets/font/Squareo.ttf') format('truetype');
-  font-weight: 400;
+  font-family: 'Noto Sans JP';
+  src: url('/src/assets/font/Noto_Sans_JP/NotoSansJP-VariableFont_wght.ttf') format('truetype');
+  font-optical-sizing: auto;
+  font-weight: 100 1000;
+  font-stretch: 25% 151%;
 }
 
-// Hyperspace【フリースクエアフォント】
+//* =====================================================================
+//* Roboto (Google Font)【ゴシック体】[通常]
+//* =====================================================================
+//* -------------------------------------------------------
+//* CDN
+//* -------------------------------------------------------
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+//* -------------------------------------------------------
+//* ローカル
+//* -------------------------------------------------------
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-Thin.ttf') format('truetype');
+//   font-weight: 100;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-light.ttf') format('truetype');
+//   font-weight: 300;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-regular.ttf') format('truetype');
+//   font-weight: 400;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-medium.ttf') format('truetype');
+//   font-weight: 500;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-bold.ttf') format('truetype');
+//   font-weight: 700;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('/assets/font/Roboto/Roboto-black.ttf') format('truetype');
+//   font-weight: 900;
+//   font-style: normal;
+// }
+
+//* =====================================================================
+//* Roboto (Google Font)【ゴシック体】[バリアブルフォント]
+//* =====================================================================
+//* -------------------------------------------------------
+//* CDN
+//* -------------------------------------------------------
+// @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+
+//* -------------------------------------------------------
+//* ローカル
+//* -------------------------------------------------------
 @font-face {
-  font-family: 'Hyperspace';
-  src: url('/assets/font/Hyperspace Bold.otf') format('opentype');
-  font-weight: 700;
+  font-family: 'Roboto';
+  // src: url('./fonts/RobotoFlex[slnt,wdth,wght,opsz].ttf') format('truetype-variations');
+  src: url('/assets/font/Roboto_Flex/RobotoFlex-VariableFont_GRAD,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf')
+    format('truetype-variations');
+  font-weight: 100 1000;
+  font-stretch: 25% 151%;
 }
