markuplint追加、改行コード変更、'_'ファイル除外をディクレトリにも適用などいろいろリファクタリング

--- a/src/assets/sass/global/variables/_font.scss
+++ b/src/assets/sass/global/variables/_font.scss
@@ -1,6 +1,5 @@
 //* color
 
-
 // $c-1ry: #000;
 // $c-2ry: #000;
 // $c-3ry: #000;
@@ -9,8 +8,7 @@
 // 色 優先順位
 $c-main: rgb(130, 54, 56);
 $c-sub: rgb(189, 103, 102);
-$c-sub2: #FFE4E1;
-
+$c-sub2: #ffe4e1;
 
 // 色名
 $c-blk: #000;
@@ -21,8 +19,6 @@ $c-wht2: #ddd;
 // 色 仕様箇所
 $c-txt: rgb(51, 51, 51);
 $c-bg: #fff;
-
-
 
 //* font-family
 // 日本語フォント
@@ -64,7 +60,6 @@ $ff-ant: 'Anton', sans-serif;
 // $ff-mil: 'Miltonian', serif;
 // $ff-milt: 'Miltonian Tattoo', serif;
 // $ff-rub: 'Rubik Dirt', sans-serif;
-
 
 //* font-weight
 $fw-thin: 100;
