--- a/src/assets/ejs/_common/_script.ejs
+++ b/src/assets/ejs/_common/_script.ejs
@@ -1,8 +1,1 @@
-  <script src="/assets/js/main.js"></script>
-  <!-- <script>
-    const hoge = 'TEST';
-    console.log(hoge);
-  </script> -->
-  </body>
-
-  </html>
+<script src="/assets/js/main.js" defer></script>
