--- a/src/assets/ejs/about/index.ejs
+++ b/src/assets/ejs/about/index.ejs
@@ -2,25 +2,47 @@
 <%# ページIDを入力する -%>
 <% pageId = 'about'; %>
 
-<%# ヘッド -%>
-<%- include(`${ROOT}/_common/_head.ejs`) %>
+<!DOCTYPE html>
+<html lang="ja">
 
-<%# ヘッダー -%>
-<%- include(`${ROOT}/_common/_header.ejs`) %>
+<head>
+  <%# ヘッド -%>
+  <%- include(`${ROOT}/_common/_head.ejs`) %>
+</head>
 
-<%# メイン -%>
-<%# main -%>
-<main class="l-main">
-  <h2>ABOUTページです。</h2>
-  <p><a href="/">TOPページはこちらをクリック</a></p>
-</main>
+<body>
 
-<%# フッター -%>
-<%- include(`${ROOT}/_common/_footer.ejs`) %>
+  <%# ヘッダー -%>
+  <%- include(`${ROOT}/_common/_header.ejs`) %>
 
-<%# スクリプト -%>
-<script>
-  const hoge = 'TEST';
-  console.log(hoge);
-</script>
-<%- include(`${ROOT}/_common/_script.ejs`) %>
+  <%# メイン -%>
+  <%# main -%>
+  <main class="l-main">
+    <h2>ABOUTページです。</h2>
+    <p><a href="/">TOPページはこちらをクリック</a></p>
+  </main>
+
+  <!-- <h3>
+    <p>マーックアップエラー用テキスト</p>
+  </h3> -->
+
+  <p class="js-test-html">HTMLファイル内に記述したJSで色変更</p>
+  <p class="js-test-js-hoge">JSファイル内に記述したコードで色変更：hogeファイル</p>
+  <p class="js-test-js-foo">JSファイル内に記述したコードで色変更：fooファイル</p>
+
+  <%# フッター -%>
+  <%- include(`${ROOT}/_common/_footer.ejs`) %>
+
+  <%# スクリプト -%>
+  <script>
+    const textColorChange = () => {
+      const testJsHtml = document.querySelector('.js-test-html');
+      testJsHtml.style.color = 'red';
+    };
+    textColorChange();
+  </script>
+  <%- include(`${ROOT}/_common/_script.ejs`) %>
+
+</body>
+
+</html>
