--- a/src/assets/ejs/index.ejs
+++ b/src/assets/ejs/index.ejs
@@ -2,27 +2,56 @@
 <%# ページIDを入力する -%>
 <% pageId = 'top'; -%>
 
-<%# ヘッド -%>
-<%- include(`${ROOT}/_common/_head.ejs`) %>
+<!DOCTYPE html>
+<html lang="ja">
 
-<%# ヘッダー -%>
-<%- include(`${ROOT}/_common/_header.ejs`) %>
+<head>
+  <%# ヘッド -%>
+  <%- include(`${ROOT}/_common/_head.ejs`) %>
 
-<%# main -%>
-<main class="l-main">
-  <h2>TOPページです。</h2>
-  <p>テキストテキストテキスト</p>
-  <p><a href="/about" class="test-link">ABOUTページはこちらをクリック</a></p>
-  <%- include(`${ROOT}/_contents/_top/_mv.ejs`) %>
+  <%# スクリプト -%>
+  <%- include(`${ROOT}/_common/_script.ejs`) %>
+</head>
 
-</main>
+<body>
+  <%# ヘッダー -%>
+  <%- include(`${ROOT}/_common/_header.ejs`) %>
 
-<%# フッター -%>
-<%- include(`${ROOT}/_common/_footer.ejs`) %>
+  <%# main -%>
+  <main class="l-main">
+    <h2>TOPページです。</h2>
 
-<%# スクリプト -%>
-<script>
-  const hoge = 'TEST'
-  console.log(hoge);
-</script>
-<%- include(`${ROOT}/_common/_script.ejs`) %>
+    <p>テキスト<b>テキスト</b>テキスト<em>テキスト</em>テキスト</p>
+
+    <p><a href="/about" class="test-link">ABOUTページはこちらをクリック</a></p>
+
+    <p>テキストテキスト<br>テキストテキスト<br /></p>
+
+    <!-- <h3>
+      <p>マーックアップエラー用テキスト</p>
+    </h3> -->
+
+    <p class="js-test-html">HTMLファイル内に記述したJSで色変更</p>
+    <p class="js-test-js-hoge">JSファイル内に記述したコードで色変更：hogeファイル</p>
+    <p class="js-test-js-foo">JSファイル内に記述したコードで色変更：fooファイル</p>
+
+
+    <%- include(`${ROOT}/_contents/_top/_mv.ejs`) %>
+
+  </main>
+
+  <%# フッター -%>
+  <%- include(`${ROOT}/_common/_footer.ejs`) %>
+
+  <!-- defer属性は外部スクリプトファイルにのみ効果があるため、インラインスクリプトタグで記述したscriptはdefer属性使用不可のため注意 -->
+  <script>
+    const textColorChange = () => {
+      const testJsHtml = document.querySelector('.js-test-html');
+      testJsHtml.style.color = 'red';
+    };
+    textColorChange();
+  </script>
+
+</body>
+
+</html>
