--- a/src/assets/sass/global/function/_f-common.scss
+++ b/src/assets/sass/global/function/_f-common.scss
@@ -2,13 +2,21 @@
 @use 'sass:map';
 @use '../variables/' as *;
 
+//* -------------------------------------------------------
+//* フォントサイズ：rem単位をpx感覚で扱えるようにする
+//* -------------------------------------------------------
 // px to rem
+// 使用例: font-size: to-rem(32);
 @function to-rem($pixel) {
   $baseFontSize: 16;
   @return math.div($pixel, $baseFontSize) * 1rem;
 }
 
+//* -------------------------------------------------------
+//* vw単位をpx感覚で扱えるようにする
+//* -------------------------------------------------------
 // px to vw
+// 使用例: font-size: to-vw(32);
 @function to-vw($pixel, $viewport: map.get($viewportList, pc)) {
   // $viewportの値が数値であるかどうかを識別し条件分岐させる
   // $viewportの記述はvariables > _base.scss にあります
@@ -20,16 +28,27 @@
   }
 }
 
+//* -------------------------------------------------------
+//* 行送り：line-heightのpx単位をデザインカンプの数値のままで扱えるようにする
+//* -------------------------------------------------------
 // line-height
+// 使用例: font-size: f-lh(2);
 @function f-lh($pixel, $height) {
   @return math.div($height, $pixel);
 }
 
+//* -------------------------------------------------------
+//* トラッキング：letter-spacingの値をデザインカンプの数値のままで扱えるようにする
+//* -------------------------------------------------------
 // letter-spacing
+// 使用例: font-size: f-ls(50);
 @function f-ls($spacing) {
-  @return math.div($spacing, 1000) + rem;
+  @return math.div($spacing, 1000) + em;
 }
 
+//* -------------------------------------------------------
+//* clamp()関数でレスポンシブ対応する場合に使用
+//* -------------------------------------------------------
 // viewport-based clamped values
 @function clamp-vp(
   $minSize,
@@ -54,6 +73,14 @@
   }
 }
 
+//* -------------------------------------------------------
+//* SVG画像をbackgroundで指定する場合に使用
+//* -------------------------------------------------------
 // 使い方
 // 例：width: clamp-vp(clamp-vp(最小サイズ, 最大サイズ, 最小ビューポートサイズ, 最大ビューポートサイズ))
 // ※ 最小ビューポートサイズ, 最大ビューポートサイズは初期値が入っているので任意入力です。
+
+// SVG画像をbackground-imageで指定し、色を変更する際にしようするカラーコード変換
+@function colorCodeEncode($colorCode) {
+  @return '%23' + str-slice($colorCode, 2, -1);
+}
