--- a/src/assets/ejs/index.ejs
+++ b/src/assets/ejs/index.ejs
@@ -6,11 +6,16 @@
 <html lang="ja">
 
 <head>
-  <%# ヘッド -%>
+  <%# メタデータ等 -%>
   <%- include(`${ROOT}/_common/_head.ejs`) %>
 
-  <%# スクリプト -%>
+  <%# CSS -%>
+  <%- include(`${ROOT}/_common/_link.ejs`) %>
+
+  <%# JavaScripts -%>
   <%- include(`${ROOT}/_common/_script.ejs`) %>
+  <script src="/assets/js/page/home.js" defer></script>
+
 </head>
 
 <body>
@@ -20,10 +25,13 @@
   <%# main -%>
   <main class="l-main">
     <h2>TOPページです。</h2>
+    <p><a href="/about" class="test-link">ABOUTページはこちらをクリック</a></p>
+    <p><a href="/button/" class="test-link">BUTTONページはこちらをクリック</a></p>
+    <p><a href="/layout/" class="test-link">LAYOUTページはこちらをクリック</a></p>
+    <p><a href="/javascript/" class="test-link">JAVASCRIPTページはこちらをクリック</a></p>
 
     <p>テキスト<b>テキスト</b>テキスト<em>テキスト</em>テキスト</p>
 
-    <p><a href="/about" class="test-link">ABOUTページはこちらをクリック</a></p>
 
     <p>テキストテキスト<br>テキストテキスト<br /></p>
 
@@ -34,6 +42,7 @@
     <p class="js-test-html">HTMLファイル内に記述したJSで色変更</p>
     <p class="js-test-js-hoge">JSファイル内に記述したコードで色変更：hogeファイル</p>
     <p class="js-test-js-foo">JSファイル内に記述したコードで色変更：fooファイル</p>
+    <p class="js-test-js-bar">JSファイル内に記述したコードで色変更：barファイル（homeのみ）</p>
 
 
     <%- include(`${ROOT}/_contents/_top/_mv.ejs`) %>
