--- a/src/assets/sass/foundation/_base.scss
+++ b/src/assets/sass/foundation/_base.scss
@@ -19,13 +19,14 @@
   --font_en: 'Roboto Flex', sans-serif;
 
   //* -------------------------------------------------------
-  //* 余白、間隔
+  //* レイアウト
   //* -------------------------------------------------------
-  --contents_width: 1100px;
-  // --contents_width_wide: 1400px;
-  --body_padding_side: 60px;
-  // --body_padding_side: 5%;
+  --contents_width_m: 1040px;
+  --body_paddingSide_m: 120px;
   --vw: calc(100vw - var(--scrollbarWidth));
+  @include mq(md) {
+    --body_paddingSide_m: 40px;
+  }
 }
 
 // html {
@@ -46,8 +47,8 @@ body {
   letter-spacing: 0;
 }
 
-body.is-fixed {
-  position: fixed;
-  left: 0;
-  width: 100%;
-}
+// body.is-fixed {
+//   position: fixed;
+//   left: 0;
+//   width: 100%;
+// }
